chore: add option for server timeout and set default to 5m
